Added OTP login ftl file template to sunbird realm

--- a/keycloak_local_setup/keycloak_v701/themes/sunbird/login/messages/messages_en.properties
+++ b/keycloak_local_setup/keycloak_v701/themes/sunbird/login/messages/messages_en.properties
@@ -273,3 +273,5 @@ usernamePlaceholder = Enter your Registered Email address/Mobile number
 passwordPlaceholder = Enter your password
 loginSunbird = Welcome to SUNBIRD
 registerHere = Register here
+
+placeholderForOtpMobileNumber=Enter Registered Mobile Number
